chore: enhance CI with doc build and security audit
Add documentation build check to lint job and create weekly security
audit workflow. Fix rustdoc warnings to pass the new doc check.
Remove Cargo.lock from tracking as this is a library crate.

Changes:
- Add `cargo doc --workspace --no-deps` step to lint job with `-D warnings`
- Create `audit.yml` workflow for weekly security vulnerability scanning
- Fix broken intra-doc links and HTML-like syntax in doc comments
- Remove `Cargo.lock` from git tracking for library crate convention

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
       - run: cargo clippy --workspace --all-targets -- -D warnings
       - run: cargo install taplo-cli --locked
       - run: taplo fmt --check
+      - run: cargo doc --workspace --no-deps
+        env:
+          RUSTDOCFLAGS: -D warnings
 
   test:
     runs-on: ubuntu-latest
